Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rgk-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-1:985539801924:certificate/61e678d4-6195-4157-ac30-233aea7ec525
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/subnets: subnet-084b793b493f66068, subnet-0f997f5d1cdbd05b6
    alb.ingress.kubernetes.io/group.name: rgk
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: rgk-app-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rgk-app-service
            port:
              number: 80
